# hw-web-07

./: README.md  alembic.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: d9f693dbb9af_init.py
